design (utility): `background` 요소 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,15 @@
   /* fonts */
   --font-pretendard: var(--font-pretendard);
 }
+
+@utility bg-default {
+  @apply bg-white;
+}
+
+@utility bg-secondary {
+  @apply bg-slate-100;
+}
+
+@utility bg-tertiary {
+  @apply bg-slate-200;
+}
