design (theme): `opacity` 요소 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,9 @@
   /* fonts */
   --font-pretendard: var(--font-pretendard);
 
+  /* opacity */
+  --opacity-off: 38%;
+
   /* typography */
   --text-heading1: var(--text-5xl);
   --text-heading1--line-height: var(--leading-normral);
