refactor(layouts): `Header` 레이아웃 컴포넌트 리팩토링 (svg → 코드)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,14 @@
   @apply bg-slate-200;
 }
 
+@utility border-secondary {
+  @apply border-slate-100;
+}
+
+@utility border-tertiary {
+  @apply border-slate-200;
+}
+
 @layer base {
   /* disabled 속성이 없는 모든 요소 */
   [data-status='disabled'] {
