--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,20 @@
 
 @custom-variant active (&[data-status="active"]);
 
+@keyframes opacity-bounce {
+  0%,
+  100% {
+    opacity: 1;
+    transform: none;
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    opacity: 0.38;
+    transform: translateY(25%);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
+
 @utility bg-default {
   @apply bg-white;
 }
